--- a/ejercicios/index.html
+++ b/ejercicios/index.html
@@ -82,11 +82,8 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">menu1</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">menu2</a>
+              <li class="nav-item" v-for="item in configuracionPagina.menus">
+                <a class="nav-link" v-bind:href="item.url">{{ item.etiqueta }}</a>
               </li>
             </ul>
           </div>
@@ -99,15 +96,14 @@
         </div>
         <div class="row">
           <div class="col-12 col-sm-6 col-md-4">
-            <img
-              src="https://ae01.alicdn.com/kf/S00eb0e55c14f47e2bbf828a92ecd5515U/S6S-Mini-GPS-Drones-150g-Drone-4K-Profesional-HD-Dual-Camera-5G-WIFI-FPV-Brushless-Folding.jpg_Q90.jpg_.webp"
-              alt=""
-              width="100%"
-            />
+            <img v-bind:src="producto.imagen" alt="" width="100%">
           </div>
           <div class="col-12 col-sm-6 col-md-8">
-            <h6>{{producto.descripcion}}</h6>
-            <div class="p-3 mb-2 text-white" style="background-color: gray">
+            <h6 v-html="producto.descripcion"></h6>
+            <div
+              class="p-3 mb-2 text-white"
+              :style="configuracionPagina.precioEstilos"
+            >
               Precio: {{producto.precio}} BOB
             </div>
             <h5>Color</h5>
@@ -116,114 +112,50 @@
                 v-for="color of producto.colores"
                 class="color-box clic"
                 :style="'background:' + color"
-                @click="SeleccionarColor(color)"
+                @click="seleccionarColor(color)"
               ></div>
             </div>
             <h5>Cantidad</h5>
             <div class="quantity">
-              <button>-</button>
-              <div>1</div>
-              <button>+</button>
+              <button @click="disminuirCant(cantidad)">-</button> <div>{{cantidad}} </div> <button @click="adicionarCant(cantidad)">+</button>
             </div>
             <div class="buy-box">
-              <button type="button" class="btn btn-primary">Comprar</button>
+              <div v-if="(cantidad > 0) && (colorSel !== null)">
+                <button type="button" class="btn btn-primary" @click="comprarProducto(colorSel, cantidad)">Comprar</button>
+              </div>
             </div>
           </div>
         </div>
       </div>
 
       <div class="container">
+
         <div class="row">
           <h4>Productos relacionados</h4>
         </div>
         <div class="row">
-          <div class="col">
+          <div class="col" v-for="producto in productosRelacionados" :key="producto.id">
             <div class="card" style="width: 18rem">
               <div class="card-body">
-                <h5 class="card-title">{{productosRelacionados[0].nombre}}</h5>
-                <img
-                  src="https://ae01.alicdn.com/kf/S00eb0e55c14f47e2bbf828a92ecd5515U/S6S-Mini-GPS-Drones-150g-Drone-4K-Profesional-HD-Dual-Camera-5G-WIFI-FPV-Brushless-Folding.jpg_Q90.jpg_.webp"
-                  alt=""
-                  width="100%"
-                />
-                <p class="card-text">
-                  {{productosRelacionados[0].descripcion}}
-                </p>
-                <div class="producto-relacionado-precio">
-                  Precio: {{productosRelacionados[0].precio}} BOB
-                </div>
+                <h5 class="card-title">{{producto.nombre}}</h5>
+                <img :src="producto.imagen" alt="" width="100%">
+                <p class="card-text">{{producto.descripcion}}</p>
+                <div class="producto-relacionado-precio">Precio: {{producto.precio}} BO</div>
                 <div>
-                  <div>
-                    <div
-                      v-for="color of productosRelacionados[0].colores"
-                      class="color-box clic"
-                      :style="'background:' + color"
-                    ></div>
-                  </div>
-                </div>
-              </div>
+            <div>
+              <div class="color-box clic"v-for="color in producto.colores" :key="color" :style="'background:' + color"></div>
             </div>
-          </div>
-          <div class="col">
-            <div class="card" style="width: 18rem">
-              <div class="card-body">
-                <h5 class="card-title">{{productosRelacionados[1].nombre}}</h5>
-                <img
-                  src="https://ae01.alicdn.com/kf/S00eb0e55c14f47e2bbf828a92ecd5515U/S6S-Mini-GPS-Drones-150g-Drone-4K-Profesional-HD-Dual-Camera-5G-WIFI-FPV-Brushless-Folding.jpg_Q90.jpg_.webp"
-                  alt=""
-                  width="100%"
-                />
-                <p class="card-text">
-                  {{productosRelacionados[1].descripcion}}
-                </p>
-                <div class="producto-relacionado-precio">
-                  Precio: {{productosRelacionados[1].precio}} BOB
-                </div>
-                <div>
-                  <div>
-                    <div
-                      v-for="color of productosRelacionados[1].colores"
-                      class="color-box clic"
-                      :style="'background:' + color"
-                    ></div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card" style="width: 18rem">
-              <div class="card-body">
-                <h5 class="card-title">{{productosRelacionados[2].nombre}}</h5>
-                <img
-                  src="https://ae01.alicdn.com/kf/S00eb0e55c14f47e2bbf828a92ecd5515U/S6S-Mini-GPS-Drones-150g-Drone-4K-Profesional-HD-Dual-Camera-5G-WIFI-FPV-Brushless-Folding.jpg_Q90.jpg_.webp"
-                  alt=""
-                  width="100%"
-                />
-                <p class="card-text">
-                  {{productosRelacionados[2].descripcion}}
-                </p>
-                <div class="producto-relacionado-precio">
-                  Precio: {{productosRelacionados[2].precio}} BOB
-                </div>
-                <div>
-                  <div>
-                    <div
-                      v-for="color of productosRelacionados[2].colores"
-                      class="color-box clic"
-                      :style="'background:' + color"
-                    ></div>
-                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
+
       <footer
         :style="'background-color:' + configuracionPagina.footerColor"
       ></footer>
-    </div>
+    
     <script type="module">
       import {
         createApp,
@@ -234,6 +166,8 @@
           return {
             colorSel: null,
             cantidad: 0,
+            color: null,
+
             configuracionPagina: {
               marca: "MegaDron",
               menuColor: "lightblue",
@@ -253,22 +187,18 @@
             },
             producto: {
               id: 1,
-              imagen:
-                "https://cdn.shopify.com/s/files/1/0640/5067/files/pexels-photo-53903_large.jpg?v=1492718386",
+              imagen: "https://cdn.shopify.com/s/files/1/0640/5067/files/pexels-photo-53903_large.jpg?v=1492718386",
               nombre: "Dron LU3 MAX GPS 8K HD",
-              descripcion:
-                "Dron LU3 MAX GPS 8K HD profesional con <b>cámara Dual</b>, cardán autoestabilizador, Motor sin escobillas para evitar obstáculos, cuadricóptero plegable",
+              descripcion: "Dron LU3 MAX GPS 8K HD profesional con <b>cámara Dual</b>, cardán autoestabilizador, Motor sin escobillas para evitar obstáculos, cuadricóptero plegable",
               precio: "620",
               colores: ["red", "blue", "black", "yellow"],
             },
             productosRelacionados: [
               {
                 id: 2,
-                imagen:
-                  "https://cdn.shopify.com/s/files/1/0640/5067/files/pexels-photo-53903_large.jpg?v=1492718386",
+                imagen:"https://cdn.shopify.com/s/files/1/0640/5067/files/pexels-photo-53903_large.jpg?v=1492718386",
                 nombre: "KF102",
-                descripcion:
-                  "Dron plegable KF102 con Gps, 8K, cámara Dual HD, 2 ejes, cardán, Motor sin escobillas, fotografía aérea, 1200M de distancia, novedad de 2022",
+                descripcion: "Dron plegable KF102 con Gps, 8K, cámara Dual HD, 2 ejes, cardán, Motor sin escobillas, fotografía aérea, 1200M de distancia, novedad de 2022",
                 precio: "1180",
                 colores: ["orange", "blue"],
               },
@@ -276,8 +206,7 @@
                 id: 3,
                 imagen: "https://m.media-amazon.com/images/I/61T16KqZtPL.jpg",
                 nombre: "KBDFA-Dron E888 RC",
-                descripcion:
-                  "KBDFA-Dron E888 RC, cuadricóptero profesional FPV, 4K HD, fotografía aérea, evitación de obstáculos, helicóptero, juguetes de distancia",
+                descripcion: "KBDFA-Dron E888 RC, cuadricóptero profesional FPV, 4K HD, fotografía aérea, evitación de obstáculos, helicóptero, juguetes de distancia",
                 precio: "154",
                 colores: ["black", "midnightblue"],
               },
@@ -285,8 +214,7 @@
                 id: 4,
                 imagen: "https://i.blogs.es/9e6591/dron/450_1000.jpg",
                 nombre: "Dron Profesional 4K con GPS",
-                descripcion:
-                  "Dron Profesional 4K con GPS, 8K, cámara HD, 3 ejes, cardán antivibración, evitación de obstáculos, fotografía aérea, Quadcopter, nuevo",
+                descripcion: "Dron Profesional 4K con GPS, 8K, cámara HD, 3 ejes, cardán antivibración, evitación de obstáculos, fotografía aérea, Quadcopter, nuevo",
                 precio: "1800",
                 colores: ["teal", "blue", "slategrey", "navy"],
               },
@@ -294,12 +222,23 @@
           };
         },
         methods: {
-          SeleccionarColor(color) {
+          seleccionarColor(color) {
             this.colorSel = color;
-            alert("color seleccionado es: " + this.colorSel);
+            alert("El color seleccionado es " + this.colorSel.toUpperCase());
+          },
+          adicionarCant(cantidad) {
+            this.cantidad = cantidad + 1;
+          },
+          disminuirCant(cantidad) {
+            if (this.cantidad > 0)
+            this.cantidad = cantidad - 1;
+          },
+          comprarProducto(color, cantidad) {
+            alert("Para la compra Usted selecciono " + this.cantidad + " Dron(es) de color " + this.colorSel.toUpperCase());
           },
         },
       }).mount("#app");
     </script>
-  </body>
+</body>
+</div>
 </html>
